Updated back buttons to work as an onclick event to go back to the last page

--- a/views/team/edit.liquid
+++ b/views/team/edit.liquid
@@ -5,10 +5,8 @@
 <h1>Edit Team</h1>
 {% endblock %}
 {% block navBar %}
-<form action="/pokemon" method="GET">
-    <input class="nav-btn" type="submit" value="Back to Pokemon">
-    <input class="nav-btn" type="submit" formaction="/team" formmethod="GET" value="back to Teams">
-    <input class="nav-btn" type="submit" formaction="/user/logout" formmethod="GET" value="Log Out">
+<form>
+    <input class="nav-btn" type="button" value="Back" onclick="history.go(-1)">
 </form>
 {% endblock %}
 
