--- a/views/pokemon/show.liquid
+++ b/views/pokemon/show.liquid
@@ -3,8 +3,8 @@
 <h1>Pokedex Entry - {{pokemon.name | capitalize}}</h1>
 {% endblock%}
 {% block navBar %}
-<form action="/pokemon" method="GET">
-    <input class="nav-btn" type="submit" value="Back">
+<form>
+    <input class="nav-btn" type="button" value="Back" onclick="history.go(-1)">
     <input class="nav-btn" type="submit" formaction="/team" formmethod="GET" value="View Teams">
     <input class="nav-btn" type="submit" formaction="/user/logout" formmethod="GET" value="Log Out">
 </form>
