--- a/views/team/edit.liquid
+++ b/views/team/edit.liquid
@@ -15,7 +15,7 @@
     <div class="container-teams">
         <div class="form-team">
             <form action="/team/{{editTeam._id}}?_method=PUT" method="POST">
-                <p class="frm-team-name">Team Name<span class="text-red">*</span>:<input type="text" name="teamName" value="{{editTeam.teamName}}" placeholder="Team Name"></p>
+                <!-- <p class="frm-team-name">Team Name<span class="text-red">*</span>:<input type="text" name="teamName" value="{{editTeam.teamName}}" placeholder="Team Name"></p> -->
                 <p class="frm-team-img">Team Icon:
                     <input type="text" name="teamImg" value="{{editTeam.teamImg}}" placeholder="Team Icon">
                 </p>
@@ -24,7 +24,7 @@
                 <br>
                 <h2>Your Teams</h2>
                 <div class="team-div">
-                    {{ editTeam.teamName}}
+                    <input type="text" name="teamName" value="{{editTeam.teamName}}" placeholder="Team Name">
                     <div class="team-btns">
                         <input class="delete-btn btn" type="submit" value="Delete Team" formaction="/team/{{editTeam._id}}?_method=DELETE" formmethod="POST" >
                     </div>
