added images for readme

--- a/views/user/login.liquid
+++ b/views/user/login.liquid
@@ -12,10 +12,10 @@
     <form action="/user/login" method="post">
       <fieldset>
         <legend>User Login</legend>
-        <label>USERNAME: <input type="text" name="username" required />
+        <label>USERNAME: <input type="text" name="username" value="displayuser"required />
         </label>
         <br>
-        <label>PASSWORD: <input type="password" name="password" required />
+        <label>PASSWORD: <input type="password" name="password" value="123" required />
         </label>
         <br>
         <input type="submit" value="Login" />
